<resources>
    <string name="app_name">AndroidCore</string>
    <!--    String de login-->
    <string name="login">LOG IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or"> OR </string>
    <string name="digital_foods">Digital House Foods</string>
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
    <string name="principais_pratos">Principais Pratos</string>
    <string name="nome_do_prato">Nome do Prato</string>
    <string name="nome_do_restaurante">Nome do restaurante</string>
    <string name="logo">logo</string>
    <string name="arrow_back">arrow back</string>
    <string name="endereco">Endereco</string>
    <string name="horario">Horario</string>
</resources>