<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="346dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivRestaurante"
            android:layout_width="match_parent"
            android:layout_height="247dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/image1"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/tvNomeRestaurante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/nome_do_restaurante"
            android:textColor="@color/card_nome_local"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEnderecoRestaurante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/endereco"
            android:textColor="@color/edit_text_hint_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvHorarioRestaurante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/horario"
            android:textColor="@color/edit_text_hint_label"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>