<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.PratoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="342dp">

        <ImageView
            android:id="@+id/logoPrato"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/logo"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/image1" />

        <ImageView
            android:id="@+id/icBack"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/arrow_back"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/tvNomePrato"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="0dp"
            android:text="@string/nome_do_prato"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvDescricaoPrato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        android:text="@string/principais_pratos"
        android:textColor="@color/edit_text_hint_label"
        android:textSize="24sp" />

</LinearLayout>